[package]
name = "miot"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
md-5 = "0.10"
mdns-sd = "0.18"
paste = "1"
reqwest = { version = "0.13", features = ["form", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.clippy]
needless_borrows_for_generic_args = "allow"
